# xcpplibs

./: ProjectHome.md
autorestart/: autorestart.cpp
dirwatch/: DirectoryWatch.cpp  DirectoryWatch.h  DirectoryWatch.sln  DirectoryWatch.vcxproj
dummy/: Doxyfile  config.status  dummy.dev  dummy.kdevelop.pcs  dummy.kdevses  libtool
dummy/autom4te.cache/: output.0
dummy/src/: Bases.h  Makefile
dummy/templates/: cpp
dummy/win32/: install.bat  uninstall.bat
dummy/wxdummy/: Makefile.in  Makefile.win  config.status  configure  configure.in  wxDummy.dev  wxdummy.kdevelop  wxdummy.kdevelop.pcs  wxdummy.kdevses
dummy/wxdummy/doc/: Makefile.am
dummy/wxdummy/src/: Makefile
dummy/wxdummy/win32/: wxDummy.exe.Manifest
libjobdispatch/: .project
libjobdispatch/src/: JobDispatchChannel.cpp  JobDispatcher.cpp  JobDispatcher.h  JobHandler.cpp  JobHandler.h  JobInfo.lcm  JobManager.h  Makefile  MessageException.h  MessageHandler.h  PingChannel.cpp  PingChannel.h  stringcollections.h
logger/: .autotools  logger.cpp
logger/src/: Makefile  logger.cpp  logger.h  loggerTest.cpp
trunk/autorestart/: autorestart.cpp  process.cpp
trunk/dummy/: Makefile  Makefile.in  authors  config.h  configure  configure.in  dummy.kdevelop
trunk/dummy/wxdummy/src/: Makefile.am  Makefile.in  wxDummyProgramFrame.cpp  wxDummyProgramFrame.h  wxDummyProgramFrame.wxform  wxDummyProgramFrameApp.cpp  wxDummyProgramFrameApp.h  wxdummy  wxdummy.desktop
trunk/dummy/wxdummy/src/.deps/: wxDummyProgramFrame.Po
trunk/libjobdispatch/: .cproject
trunk/logger/: .cproject  .project  loggerTest.cpp
(+25 files in other folders)
