# these are the headers for your project
noinst_HEADERS = wxDummyProgramFrame.h wxDummyProgramFrameApp.h

#########################################################################
# APPLICATION SECTION
#########################################################################
# this is the program that gets installed.  it's name is used for all
# of the other Makefile.am variables
bin_PROGRAMS = wxdummy

# the application source, library search path, and link libraries
wxdummy_SOURCES = wxDummyProgramFrame.cpp wxDummyProgramFrameApp.cpp
wxdummy_LDFLAGS = $(WX_LIBS) 

